Defined service and data contracts

--- a/Sample.Risk.Common.Dto/Sample.Risk.Common.Dto.csproj
+++ b/Sample.Risk.Common.Dto/Sample.Risk.Common.Dto.csproj
@@ -32,15 +32,13 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bet.cs" />
+    <Compile Include="SettledDto.cs" />
+    <Compile Include="CustomerDto.cs" />
+    <Compile Include="BetStatusTypes.cs" />
+    <Compile Include="UnsettledDto.cs" />
+    <Compile Include="BetDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
