--- a/Sample.Risk.Domain/Sample.Risk.Domain.csproj
+++ b/Sample.Risk.Domain/Sample.Risk.Domain.csproj
@@ -30,27 +30,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Customer.cs" />
-    <Compile Include="BetHistory.cs" />
-    <Compile Include="Bet.cs" />
+    <Compile Include="RiskBal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sample.Risk.Common.Dto\Sample.Risk.Common.Dto.csproj">
+      <Project>{d7759594-cbe7-4ab0-b5d4-de5005bafde7}</Project>
+      <Name>Sample.Risk.Common.Dto</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sample.Risk.DataAccess\Sample.Risk.DataAccess.csproj">
+      <Project>{e2125289-012b-4e5f-9a83-0151cbf098a7}</Project>
+      <Name>Sample.Risk.DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
